image-server-api/k8s/image-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: stg-image-deployment
    namespace: image
    labels:
        app: image
        tier: frontend
spec:
    replicas: 1
    selector:
        matchLabels:
            app: image
    strategy:
        type: RollingUpdate
        rollingUpdate:
            maxSurge: 2
            maxUnavailable: 1
    template:
        metadata:
            labels:
                app: image
                tier: frontend
        spec:
            volumes:
                - name: stg-image-tmp
                  nfs:
                      server: 10.192.32.50
                      path: /var/arquivos/image/
                      readOnly: false
            containers:
                - image: gcr.io/alfred-302520/stg-image-api:0.1
                  #command: ["sleep 600"]
                  imagePullPolicy: IfNotPresent
                  name: image
                  resources: 
                    limits:
                      cpu: 1000
                      memory: 1000Mi
                    requests:
                      cpu: 300m
                      memory: 300Mi          
                  terminationMessagePath: /dev/termination-log
                  terminationMessagePolicy: File
                  
                  volumeMounts:
                   - name: stg-image-tmp
                     mountPath: /var/arquivos/image                  
                                         
            dnsPolicy: ClusterFirst
            restartPolicy: Always
            schedulerName: default-scheduler
            securityContext: {}
            terminationGracePeriodSeconds: 10
