image-server-api/k8s/image-api-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: image
    namespace: image
    labels:
        app: image
        tier: frontend
spec:
    type: NodePort
    ports:
        - port: 3200
    selector:
        app: image
        tier: frontend
