image-server-api/k8s/image-api-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: image-ssl-ingress
    namespace: image
    annotations:
        kubernetes.io/ingress.global-static-ip-name: image-ssl-ingress-ip
        networking.gke.io/managed-certificates: image-ssl-certificate
        nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
        kubernetes.io/ingress.allow-http: "false"
        nginx.ingress.kubernetes.io/proxy-connect-timeout: "240s"
        nginx.ingress.kubernetes.io/proxy-send-timeout: "240s"
        nginx.ingress.kubernetes.io/proxy-read-timeout: "240s"
        ingress.kubernetes.io/proxy-connect-timeout: "240s"
        ingress.kubernetes.io/proxy-send-timeout: "240s"
        ingress.kubernetes.io/proxy-read-timeout: "240s"
spec:
    rules:
        - host: imageapi.alfreddelivery.com
          http:
              paths:
                  - backend:
                        serviceName: image
                        servicePort: 3200
